# irb120_CranfieldRobotics

./: LICENSE.md  README.md
instructions/: Examples.md  Installation.md
irb120cranfield_execution/: CMakeLists.txt  package.xml
irb120cranfield_execution/programs/: CubePP_irb120.yaml  CubePP_irb120_sim.yaml  irb120_demo.yaml
irb120cranfield_gazebo/: CMakeLists.txt  package.xml
irb120cranfield_gazebo/config/: configurations.yaml
irb120cranfield_gazebo/meshes/aruco/: arucoGrid.dae
irb120cranfield_gazebo/meshes/irb120enclosure/: ergobox.dae
irb120cranfield_gazebo/meshes/objects/: BlackCube.dae  BlueCube.dae  GreenCube.dae  RedCube.dae  WhiteCube.dae
irb120cranfield_gazebo/urdf/: irb120cranfield_1.urdf.xacro  irb120cranfield_2.urdf.xacro  irb120cranfield_3.urdf.xacro
irb120cranfield_gazebo/urdf/objects/: WhiteCube.urdf
irb120cranfield_gazebo/worlds/: irb120cranfield.world
irb120cranfield_moveit2/: CMakeLists.txt  package.xml
irb120cranfield_moveit2/config/: irb120.srdf  irb120egp64.srdf
irb120cranfield_ope/: CMakeLists.txt  package.xml
irb120cranfield_ope/python/: CubePP.py  PositionEstimation.py  arucoGRID.py
irb120cranfield_ope/yolo/: predict.py
