<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3">

  <name>irb120cranfield_execution</name>
  <version>1.0.0</version>
  
  <description>IFRA-Cranfield (Cranfield University, UK). Package: ABB IRB-120 (Cranfield Robotics) - Program Execution Package</description>
  <maintainer email="Mikel.Bueno-Viso@cranfield.ac.uk">mikel</maintainer>
  
  <license>(c) Centre for Robotics and Assembly, Cranfield University</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>